--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,8 +1,9 @@
 /* to be deleted later */
 .nav-header {
   margin-bottom: 2rem;
-  align-items: space-around;
   justify-content: space-around;
+  /* align-items: center; */
+  flex-wrap: nowrap;
 }
 .nav-header * {
   place-self: center;
@@ -10,12 +11,14 @@
   flex: 0 1 15%;
 }
 .nav {
-  flex-flow: column wrap;
-  margin-bottom: 0;
+  flex-flow: column nowrap;
   width: 100%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 100;
   letter-spacing: 0.5ch;
+}
+.nav-site {
+  margin: 0;
 }
 .nav .list-inline {
   margin: unset;
@@ -28,6 +31,7 @@
 
 .nav-header .logo {
   width: clamp(4rem, 8rem, 12rem);
+  height: auto;
   border-radius: 5px;
   margin: 1ch;
 }
@@ -162,16 +166,22 @@ input[type="search"],
 }
 
 .search-wrapper input[type="search"] {
-  min-width: 15rem;
+  min-width: 15ch;
+  max-width: 25ch;
+
 }
-.search-wrapper .form-item {
-  margin-right: 0;
+.search-wrapper input[type="search"] + .btn.clear-search {
+  visibility: hidden;
+}
+.search-wrapper input[type="search"]:focus + .btn.clear-search {
+  visibility: visible;
 }
 .search-wrapper .btn {
   margin: 0;
   height: max-content;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+  min-width: 48px;
 }
 
 .nav-header .btn-toggle-theme {
@@ -179,8 +189,9 @@ input[type="search"],
   max-width: 4rem;
   min-height: fit-content;
   max-height: 3rem;
-  padding: 4px;
+  padding: 0;
   border-radius: 25px;
+  display: block;
 }
 .invisible {
   visibility: hidden;
@@ -190,9 +201,24 @@ input[type="search"],
     flex-wrap: nowrap;
   }
 }
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  height: 0px;
+  width: 0px;
+  display: none;
+}
 @media screen and (max-width: 35em) {
+  .search-wrapper .btn {
+    max-width: 1em;
+    padding: 4px;
+  }
   .search-input-wrapper {
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
+    gap: 0;
+    max-width: 30em;
+    margin: auto;
+    border: 10px solid salmon;
+    font-size: 0.8em;
   }
 }
 @media screen and (min-width: 70em) {
