--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -10,7 +10,9 @@ tr {
 td {
   margin-left: auto;
 }
-
+.cart {
+  margin: none;
+}
 .cart-total .total {
   font-size: 1.33em;
 }
@@ -41,6 +43,18 @@ td {
   margin: 1ch;
 }
 
+.order-details table {
+  max-width: 30em;
+  /* border: 4px solid white; */
+}
+.order-details table th, 
+.order-details table td{
+  margin: 0;
+  width: 100%;
+}
+.order-details table td{
+  text-align: right;
+}
 .cart-items {
   display: flex;
   flex-flow: row wrap;
@@ -61,9 +75,7 @@ td {
 .cart .btn {
   margin: 0.5ch
 }
-.cart .card-horizontal {
-  max-height: 550px;
-}
+
 .total {
   padding: 1ch 2ch;
 }
